--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "clsx": "^2.0.0",
     "convex": "^1.7.1",
     "lucide-react": "^0.292.0",
-    "next": "14.0.3",
+    "next": "^14.0.4",
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.0.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "usehooks-ts": "^2.9.1"
   },
   "devDependencies": {
     "@types/node": "^20",
