--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@blocknote/core": "^0.11.0",
+    "@blocknote/react": "^0.11.0",
     "@clerk/clerk-react": "^4.30.2",
     "@edgestore/react": "^0.1.6",
     "@edgestore/server": "^0.1.6",
@@ -29,9 +31,10 @@
     "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "react-dropzone": "^14.2.3",
     "react-textarea-autosize": "^8.5.3",
     "sonner": "^1.3.1",
-    "tailwind-merge": "^2.0.0",
+    "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "usehooks-ts": "^2.9.1",
     "zod": "^3.22.4",
